--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "dependencies": {
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "nanoid": "5.0.7",
+    "nanoid": "5.1.5",
     "react-confetti": "6.1.0",
     "vite": "latest"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "*"
+    "@vitejs/plugin-react": "*",
+    "typescript": "^5.2.2",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7"
   }
 }
